-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u102
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8156281 | 8u111 | Andreas Eriksson | P3 | Closed | Fixed | b01 |
| JDK-8162077 | emb-8u111 | Unassigned | P3 | Resolved | Fixed | b01 |
The hs_err head is:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/java_re/workspace/8-2-build-solaris-amd64/jdk8u-dev/6662/hotspot/src/os/solaris/vm/os_solaris.cpp:300), pid=12680, tid=0x0000000000000010
# assert(thread_state == _thread_in_native) failed: Assumed thread_in_native
#
# JRE version: Java(TM) SE Runtime Environment (8.0_102-b02) (build 1.8.0_102-ea-fastdebug-langtools-nightly-h8141-20160403-b02)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.102-b02-fastdebug mixed mode solaris-amd64 compressed oops)
# Core dump written. Default location: /export/local/aurora/sandbox/results/ResultDir/JMapHeap/core or core.12680
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000000000e4d000): JavaThread "Attach Listener" daemon [_thread_in_vm, id=16, stack(0xffff80ffbcff8000,0xffff80ffbd0f8000)]
Stack: [0xffff80ffbcff8000,0xffff80ffbd0f8000], sp=0xffff80ffbd0f64f0, free space=1017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x2a15697] void VMError::report(outputStream*)+0x937
V [libjvm.so+0x2a16a8b] void VMError::report_and_die()+0x55f
V [libjvm.so+0x10b3d2b] void report_vm_error(const char*,int,const char*,const char*)+0x55f
V [libjvm.so+0x23eb227] unsigned long os::write(int,const void*,unsigned)+0x2a3
V [libjvm.so+0x149919d] int HeapDumper::dump(const char*)+0x581
V [libjvm.so+0x9eb7e1] int dump_heap(AttachOperation*,outputStream*)+0xed
V [libjvm.so+0x9ec6f0] void attach_listener_thread_entry(JavaThread*,Thread*)+0x1d4
V [libjvm.so+0x2875880] void JavaThread::thread_main_inner()+0x468
V [libjvm.so+0x28750a3] void JavaThread::run()+0x8db
V [libjvm.so+0x23d234e] java_start+0x1ce
C [libc.so.1+0x1251f1] _thrp_setup+0xa5
C [libc.so.1+0x125490] _lwp_start+0x0
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/java_re/workspace/8-2-build-solaris-amd64/jdk8u-dev/6662/hotspot/src/os/solaris/vm/os_solaris.cpp:300), pid=12680, tid=0x0000000000000010
# assert(thread_state == _thread_in_native) failed: Assumed thread_in_native
#
# JRE version: Java(TM) SE Runtime Environment (8.0_102-b02) (build 1.8.0_102-ea-fastdebug-langtools-nightly-h8141-20160403-b02)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.102-b02-fastdebug mixed mode solaris-amd64 compressed oops)
# Core dump written. Default location: /export/local/aurora/sandbox/results/ResultDir/JMapHeap/core or core.12680
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000000000e4d000): JavaThread "Attach Listener" daemon [_thread_in_vm, id=16, stack(0xffff80ffbcff8000,0xffff80ffbd0f8000)]
Stack: [0xffff80ffbcff8000,0xffff80ffbd0f8000], sp=0xffff80ffbd0f64f0, free space=1017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x2a15697] void VMError::report(outputStream*)+0x937
V [libjvm.so+0x2a16a8b] void VMError::report_and_die()+0x55f
V [libjvm.so+0x10b3d2b] void report_vm_error(const char*,int,const char*,const char*)+0x55f
V [libjvm.so+0x23eb227] unsigned long os::write(int,const void*,unsigned)+0x2a3
V [libjvm.so+0x149919d] int HeapDumper::dump(const char*)+0x581
V [libjvm.so+0x9eb7e1] int dump_heap(AttachOperation*,outputStream*)+0xed
V [libjvm.so+0x9ec6f0] void attach_listener_thread_entry(JavaThread*,Thread*)+0x1d4
V [libjvm.so+0x2875880] void JavaThread::thread_main_inner()+0x468
V [libjvm.so+0x28750a3] void JavaThread::run()+0x8db
V [libjvm.so+0x23d234e] java_start+0x1ce
C [libc.so.1+0x1251f1] _thrp_setup+0xa5
C [libc.so.1+0x125490] _lwp_start+0x0
- backported by
-
JDK-8162077 assert(thread_state == _thread_in_native) failed: Assumed thread_in_native while heap dump
-
- Resolved
-
-
JDK-8156281 assert(thread_state == _thread_in_native) failed: Assumed thread_in_native while heap dump
-
- Closed
-
- relates to
-
JDK-8141632 heapDumper.cpp: assert(length_in_bytes > 0) failed: nothing to copy
-
- Resolved
-