8153641: assert(thread_state == _thread_in_native) failed: Assumed thread_in_native while heap dump

Reviewed-by: dsamersoff, sspitsyn, sla